--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!-- TODO: Write the HTML and CSS for the header as a class -->
     <div class="left-column">
       <div class="icon-wrapper">
+        <div></div>
         <i class="fas fa-phone-volume icon"></i>
       </div>
       <div class="header-styles">
